--- a/package.json
+++ b/package.json
@@ -27,13 +27,21 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.0",
     "@angular-devkit/build-angular": "^16.2.10",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.12",
     "@types/chrome": "0.0.123",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^8.51.0",
     "jasmine-core": "5.1.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.2",
